# REPO_TEMPLATE

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
adr/: ADR-0001-exemple.md
catalog/: repos.yml
docs/: architecture.md  decisions.md  runbook.md
docs/ops/: README.md  git_cheatsheet_ibkr.ipynb
notebooks/: README.md
scripts/: healthcheck_status_json.py  nb_strip_output.py
src/_template_pkg/: __init__.py  core.py
