[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-data-pipeline"
version = "0.1.0"
description = "Template de projet data/pandas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
